# LearningRust

./: .gitignore  README.md
src/duke-coursera-rust-fundamentals/cli-utils/: Cargo.toml
src/duke-coursera-rust-fundamentals/cli-utils/src/: colors.rs  config.rs  lib.rs
src/duke-coursera-rust-fundamentals/cli-utils/tests/: test_colors.rs  test_stdin.rs
src/duke-coursera-rust-fundamentals/file_size_formatter/: Cargo.toml
src/duke-coursera-rust-fundamentals/file_size_formatter/src/: main.rs
src/duke-coursera-rust-fundamentals/simple-stdin/: Cargo.toml
src/duke-coursera-rust-fundamentals/simple-stdin/src/: main.rs
src/microsoft-learn/doctests_exercise/: Cargo.toml
src/microsoft-learn/doctests_exercise/src/: lib.rs
src/microsoft-learn/number_grouper/: Cargo.toml
src/microsoft-learn/number_grouper/src/: main.rs
src/microsoft-learn/rusty-journal/: Cargo.toml
src/microsoft-learn/rusty-journal/src/: cli.rs  main.rs  tasks.rs
src/microsoft-learn/user-authenticator/: Cargo.toml
src/microsoft-learn/user-authenticator/src/: lib.rs  main.rs
