[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

[dependencies]
#chrono = "0.4"
anyhow = "1.0"
home = "0.5"
serde_json = "1.0"
structopt = "0.3"

[dependencies.chrono]
features = ["serde"] # serde feature to serialize the chrono DateTime field.
version = "0.4"

[dependencies.serde] # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"
